remove rest server and add plugins to cem agent

--- a/cem_agent/etc/logging.cfg
+++ b/cem_agent/etc/logging.cfg
@@ -34,6 +34,12 @@ handlers=fileHandler
 qualname=CEM-agent
 propagate=0
 
+[logger_Plugin]
+level=DEBUG
+handlers=fileHandler
+qualname=Plugin
+propagate=0
+
 [handler_fileHandler]
 class=logging.handlers.RotatingFileHandler
 level=DEBUG
