--- a/cem_server/Dockerfile
+++ b/cem_server/Dockerfile
@@ -1,11 +1,11 @@
 FROM ubuntu:18.04
 MAINTAINER serlohu@upv.es
-LABEL version = '0.0.1'
+LABEL version = '0.0.2'
 
-RUN apt-get update && apt-get install --no-install-recommends -y python-pip sqlite3 iputils
+RUN apt-get update && apt-get install --no-install-recommends -y python-pip sqlite3 iputils-ping
 
 RUN pip install setuptools
 
 #&&  pip install bottle cherrypy requests
 
-EXPOSE 8080
+EXPOSE 10000
