--- a/cem_server/etc/cem.cfg
+++ b/cem_server/etc/cem.cfg
@@ -41,6 +41,7 @@ REST_API_SECRET = XXXXXXXXXXXXXX
 IPTREST_RANGE_SOURCE_PORTS = 9000,9050
 IPTREST_HOST = localhost
 IPTREST_PORT = 8080
+IPTREST_ENABLED = false
 
 PUBLIC_IP = XXXXXXXXX
 RDP_DEST_PORT = 3389
@@ -53,4 +54,3 @@ LOG_FILE_MAX_SIZE = 10485760
 
 [cem_agent]
 REST_AGENT_API_SECRET = XXXXXXXXXXX
-CEM_AGENT_PORT = 10000
