--- a/cem_agent/etc/cem-agent.cfg
+++ b/cem_agent/etc/cem-agent.cfg
@@ -14,8 +14,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 [cem-agent]
-REST_API_SECRET = XXXXXXXX
-CEM_SERVER_IP = {CEM_SERVER_IP}
+REST_API_SECRET = 4b60e92e-caf9-11e9-89b1-42010a9a001f
+CEM_SERVER_IP  = 172.20.0.2
 CEM_SERVER_PORT = 10000
 MONITORING_PERIOD = 30
 
