--- a/cem_web/Dockerfile
+++ b/cem_web/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER serlohu@upv.es
 LABEL version = '1.0.0'
 
 RUN apt-get update && apt-get install --no-install-recommends apache2 -y && docker-php-ext-install mysqli
-COPY cem/cem_web/src/ /var/www/html/
+COPY ./src/ /var/www/html/
 RUN mkdir /var/www/www-data && chown www-data /var/www/
 
 COPY ./docker-entrypoint.sh /
